# pennbook

./: .eslintignore  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-and-deploy.yaml
adsense/: Dockerfile  ad_model.pt  dp-ads.ipynb  pyproject.toml  serve.py
backend/: .env.defaults  Dockerfile  app.js  package-lock.json  package.json
backend/config/: dotenv.js
backend/error/: errorHandlers.js  errors.js
backend/errors/: errorHandlers.js  errors.js
backend/jobs/: load-affiliations.js  load-news.js  recommend-articles.js  run-load-data.js  run-recommend-articles.js  spark-recommend-articles-template.yaml  spark-recommend-articles.yaml
backend/jobs/livy/: ComputeRanksLivy.java  MyPair.java  SocialRankJob.java  SparkConnector.java
backend/models/: Chat.js  Friendship.js  News.js  Post.js  User.js  connect.js  database.js
backend/models/client/: chat_example.html
backend/routes/: api.js  auth.js  chat.js  news.js  posts.js  user.js
backend/test/: test.js
backend/util/: utils.js
frontend/: Dockerfile  babel.config.js  package-lock.json  package.json  quasar.conf.js
frontend/src/: App.vue  index.template.html
helm/: Chart.yaml  grafana-values.yaml  prometheus-values.yaml  spark-operator-values.yaml  values.yaml
helm/grafana-chart/: Chart.yaml  values.yaml
helm/pennbook-chart/: Chart.yaml  values.yaml
helm/templates/: backend.yaml  cronjob.yaml  ingress.yaml  redis.yaml  secrets.yaml
k8s/: traefik-chart-values.yaml
k8s/pennbook-chart/: values.yaml
spark/: Dockerfile  recommend-articles.py
(+37 files in other folders)
