[tool.poetry]
name = "adsense"
version = "0.1.0"
description = ""
authors = ["Rohan Gupta <rohangupta883@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
fastapi = "^0.70.1"
numpy = "^1.21.5"
torch = "^1.10.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
